...
    return HermuseRoute(
      title: 'Feed',
      children: [
        ProductCard(
          children: [
            Text(
              'YOUR FEED PROMPT',
              style: YsType.caption.flutter.copyWith(
                color: palette.contentSubtleColor,
              ),
            ),
            if (_editing) ...[
              YsTextBox(
...
